# production-agents-from-scratch

./: .gitignore  LICENSE  README.md  RUNNABLE_PLAN.md  pyproject.toml
autopilot/: __init__.py  fixtures.py  models.py  router.py  tools.py
ch01_one_call/: README.md  sample_invoice.txt  summarize_invoice.py
ch02_loop/: __init__.py  agent_loop.py  test_agent_loop.py  tool_schemas.py  tools_impl.py
ch03_tools/: dispatch.py  risk.py  schema_gen.py  test_tools.py  tools_impl.py
ch04_context/: conversation.py  test_conversation.py  tool_schemas.py  tools_impl.py  tracing.py
ch05_divide/: action_space.py  test_action_space.py
ch06_facade/: agent.py  conftest.py  facade.py  rail.py  test_agent.py  test_facade.py
ch07_analyst/: agent.py  sandbox.py  test_agent.py  test_sandbox.py
ch08_prompts/: agent.py  conftest.py  prompt_registry.py
ch09_structured/: extract_invoice.py  sample_invoice.txt  test_extract_invoice.py
ch10_guardrails/: guarded_dispatch.py  guardrails.py  test_guarded_dispatch.py  test_guardrails.py
ch11_framework/: agent.py  conftest.py  test_agent.py
ch12_multiagent/: conftest.py  demo.py  handoff.py  router.py  specialists.py  test_handoff.py  test_router.py  test_specialists.py
ch13_routing/: cascade.py  conftest.py  guard.py  routers.py  sample_routing.py  test_cascade.py  test_guard.py  test_routers.py
ch14_routing_eval/: conftest.py  golden_cases.py  routing_eval.py  test_routing_eval.py
ch15_lora/: README.md  evaluate.py  mine.py  requirements-gpu.txt  serve.py  test_evaluate.py  test_mine.py  test_serve.py  test_train.py  train.py
ch16_small_models/: README.md  calibration.py  conftest.py  economics.py  gl_coder.py  mine.py  test_calibration.py  test_economics.py  test_gl_coder.py  test_mine.py
ch17_tracing/: __init__.py  test_traced_loop.py  tool_schemas.py  tools_impl.py  traced_loop.py
ch18_prod_tracing/: README.md  __init__.py  feedback.py  register_scores.py  sampling.py  test_feedback.py  test_register_scores.py  test_sampling.py  tracing.py
ch19_eval_intro/: README.md  checks.py  run.py  test_path_vs_answer.py
ch20_structural/: conftest.py  evaluators.py  harness.py  metrics.py  test_evaluators.py  test_metrics.py
ch21_stats/: __init__.py  compare.py  intervals.py  test_stats.py
ch22_judge/: calibrate.py  conftest.py  demo.py  pairwise.py  reason_judge.py  test_judge.py
ch23_online/: __init__.py  filters.py  models.py  promote.py  test_filters.py  test_promote.py  test_triage.py  triage.py
ch24_datasets/: cases.py  coverage.py  dataset.py  mine.py  split.py  test_datasets.py
ch25_persistence/: __init__.py  boundary.py  (+5 more)
(+78 files in other folders)
